apps/jellyfin/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  annotations:
    reloader.stakater.com/auto: 'true'
  labels: &labels
    app.kubernetes.io/component: app
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      runtimeClassName: nvidia
      nodeSelector:
        nvidia.com/gpu.product: Quadro-P620-SHARED
      securityContext:
        fsGroup: 1000
      volumes:
        - name: nas-media
          persistentVolumeClaim:
            claimName: nas-media
        - name: config
          persistentVolumeClaim:
            claimName: config-pvc
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.11@sha256:aefb67e6a7ff1debdd154a78a7bbb780fd0c873d8639210a7f6a2016ad2b35db
          securityContext:
            privileged: true
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: nas-media
              mountPath: /media
            - name: config
              mountPath: /config
          resources:
            requests:
              memory: 1G
            limits:
              memory: 4G
              nvidia.com/gpu: '1'
          ports:
            - name: http
              containerPort: 8096
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 80
      targetPort: 8096

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    tailscale.com/proxy-group: ingress-proxy-group
    tailscale.com/tags: tag:k8s,tag:apps,tag:media
spec:
  defaultBackend:
    service:
      name: app-service
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts: [jellyfin]
